--- a/BadNews/Views/Shared/_Layout.cshtml
+++ b/BadNews/Views/Shared/_Layout.cshtml
@@ -29,9 +29,11 @@
 
     @RenderBody()
 
+    <base href="~/" />
     <script src="/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js" asp-append-version="true"></script>
     <script src="/js/site.js" asp-append-version="true"></script>
+    <script src="_framework/blazor.server.js"></script>
     <partial name="_ValidationScriptsPartial" />
 </body>
 </html>
